# ripterms-paladium

./: CMakeLists.txt  main.cpp
Ripterms/GUI/: GUI.cpp
